project("Miami-Scale")
add_library(miami-scale MODULE "main.cpp")
set_target_properties(miami-scale PROPERTIES PREFIX "")
set(CMAKE_BUILD_TYPE Release)
if(FORCE_32)
	set_target_properties(miami-scale PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
	set_target_properties(miami-scale PROPERTIES OUTPUT_NAME "miamiscale04rel32")
elseif(NOT WIN32 OR CMAKE_SIZEOF_VOID_P EQUAL 8)
	set_target_properties(miami-scale PROPERTIES OUTPUT_NAME "miamiscale04rel64")
else()
	set_target_properties(miami-scale PROPERTIES OUTPUT_NAME "miamiscale04rel32")
endif()
